--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-* {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
+@import './assets/styles/main.scss';
