--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -21,6 +21,7 @@ html {
 }
 
 body {
+    background-color: #FAFAFA;
     box-sizing: border-box;
     font-family: 'Montserrat';
     font-size: 1.6rem;
